# SystemCHW

./: CMakeLists.txt
Clockgenerator/: CMakeLists.txt  main.cpp
HelloSystemC/: CMakeLists.txt  main.cpp
SCVP.Exercise2/: exor.h  exor_main.cpp  mon.h  nand.h  stim.h
SCVP.Exercise3/: state_machine.cpp  state_machine.h
SCVP.Exercise4/: main.cpp  place.h  subnet.h  transition.h
SCVP.Exercise5/: kpn.cpp  kpn.h  main.cpp
SCVP.Exercise6/: bus.h  main.cpp  memory.h  processor.h
SCVP.Exercise8/: main.cpp  target.h
testingCPP/: CMakeLists.txt  main.cpp
